# PiscisRT

./: .gitignore  CMakeLists.txt  README.md
3dsImport/: 3dsimport.dsp
3dsImport/extincs/: atmosphere.h  background.h  camera.h  chunk.h  chunktable.h  ease.h  file.h  float.h  io.h  light.h  material.h  matrix.h  mesh.h  node.h  quat.h  shadow.h  tcb.h  tracks.h  types.h  vector.h  viewport.h
3dsImport/extlibs/: lib3ds-120s.lib
3dsImport/source/: 3dsimport.cpp  3dsimport.def
AseImport/: AseImport.dsp
AseImport/source/: ase.cpp  aseimport.cpp  aseimport.def
Editor/: Editor.py  PRTutMain.exp  PRTutMain.lib  PiscisRTut.i  PiscisRTut.py  PiscisRTut_wrap.cxx  creawrap.bat
Elements/: CMakeLists.txt  Elements.dsp  makeelements  makeelements.bat  makeelementsaix
Elements/extincs/: glut.h
Elements/extlibs/: expatpp.lib
Elements/misc/: nudo.3ds  nudo.ase  nudo.ase.3ds  nudo2.3ds  rhino.3ds  test.prt  testcornell.prt
Elements/source/: consola.cpp  consola.h  elements.cpp
JpgExport/: JpgExport.dsp
JpgExport/extincs/: jpeglib.h  jpegliblinux.h
JpgExport/extlibs/: libjpeg.lib
JpgExport/source/: JpgExport.cpp  JpgExport.def
JpgImport/: JpgImport.dsp
JpgImport/extincs/: jmorecfg.h  jmorecfglinux.h
JpgImport/source/: JpgImport.cpp  JpgImport.def
PiscisRT/: CMakeLists.txt  PiscisRT.dsp  linux.mak  linux.sh
PiscisRT/doc/: PiscisRT  PiscisRT.chm  footer.html
PiscisRT/extincs/: pthread.h  (+1 more)
PiscisRTMaxMaterial/: PRTMaxMaterial.dsp
PiscisRTMaxPlugin/: PRTMaxPlugin.dsp
PiscisRTut/: CMakeLists.txt  PiscisRTut.dsp  linux.mak
PngImport/: PngImport.dsp
(+118 files in other folders)
